# ATS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  RELEASE-SETUP.md  RELEASE.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: ci.yml  cron-now.yml  lighthouse.yml  release.yml
archive/source/: ATS-thread.md  ATS_MANIFESTO.md  ats-clock_ATS-v1.0.html  ats.py  ats2.py  ats_clock.html
code/: ats.py  ats_multi_planetary.py
code/bridges/: __init__.py  chinese.py  hebrew.py  hindu.py  islamic.py  maya.py
code/rust/: Cargo.toml  README.md
code/rust/ats/: Cargo.toml
code/rust/ats/src/: convert.rs  datetime.rs  duration.rs  error.rs  format.rs  lib.rs  parser.rs  places.rs
code/rust/ats/tests/: conformance.rs
docs/: index.html  manifest.webmanifest  robots.txt  sitemap.xml  sw.js
docs/_pagefind/: pagefind-entry.json  pagefind.en_6173f913df.pf_meta  pagefind.en_d7f4e09e25.pf_meta  pagefind.fr_7db5b3a96b.pf_meta  pagefind.fr_d4a06ec574.pf_meta  wasm.fr.pagefind
docs/_pagefind/fragment/: en_039fa27.pf_fragment  en_1e9ee77.pf_fragment  en_20d585c.pf_fragment  en_29c8a28.pf_fragment  en_403230c.pf_fragment  en_68e7837.pf_fragment  en_88b9446.pf_fragment  en_8b1c801.pf_fragment  en_92a496b.pf_fragment  en_9fabc36.pf_fragment  en_ceb63fe.pf_fragment  en_dd293af.pf_fragment  en_e31d41f.pf_fragment  en_ea7d95e.pf_fragment  en_f6e3955.pf_fragment  fr_25b4e3f.pf_fragment  fr_37272e4.pf_fragment  fr_3829487.pf_fragment  fr_53f3496.pf_fragment  fr_6ee3dc9.pf_fragment  fr_85751e6.pf_fragment  fr_9655b6e.pf_fragment  fr_9e97c4d.pf_fragment  fr_a8f4a2d.pf_fragment  fr_bf768c4.pf_fragment  fr_c5af283.pf_fragment  fr_c97b591.pf_fragment  fr_de9312e.pf_fragment  fr_e8b772e.pf_fragment
docs/_pagefind/index/: en_3c3ba68.pf_index  en_82e54ce.pf_index  fr_5dc6f9f.pf_index  fr_c33fbf5.pf_index
docs/api/: now.json
docs/assets/css/: style.css
docs/assets/data/: cities.json  world-land.geo.json
docs/assets/js/: ats-clock.js  ats.js  cities-page.js  clock-page.js  search.js  site.js  test-vectors-page.js  tz-utils.js
docs/en/: age.html  cities.html  code.html  comparison.html  conventions.html  dials.html  embed.html  faq.html  index.html  manifesto.html  multi-planetary.html  philosophy.html  test-vectors.html  timeline.html
docs/fr/: age.html  cadrans.html  cities.html  code.html  comparaison.html  conventions.html  embed.html  faq.html  index.html  manifeste.html  multi-planetaire.html  philosophie.html  test-vectors.html  timeline.html
docs/spec/: analog-clock.en.md  analog-clock.fr.md  comparison.en.md  comparison.fr.md  conventions.en.md  conventions.fr.md  faq.en.md  faq.fr.md  manifesto.en.md  manifesto.fr.md  multi-planetary.en.md  multi-planetary.fr.md  philosophy.en.md  philosophy.fr.md  test-vectors-arithmetic.json  test-vectors-bridges-chinese.json  test-vectors-bridges-hebrew.json  test-vectors-bridges-hindu.json  test-vectors-bridges-islamic.json  test-vectors-bridges-maya.json  test-vectors-multi-planetary-mars.json  test-vectors-multi-planetary-moon.json  test-vectors.json  versioning.en.md  versioning.fr.md
docs/spec/_rendered/: comparison.en.html  comparison.fr.html  conventions.en.html  conventions.fr.html  faq.en.html  faq.fr.html  manifesto.en.html  manifesto.fr.html  multi-planetary.en.html  multi-planetary.fr.html  philosophy.en.html  philosophy.fr.html
docs/spec/rfcs/: 0000-template.md  0001-multi-planetary-normative.md  README.md
lighthouse/: README.md  baseline-manifeste-mobile.json  baseline-v0.5.json  capture-baseline.sh  ci-assert.mjs  run-lighthouse.sh  v0.6.0.json
lighthouse/archive/: README.md  v0.7-blindage-embed-en.json  v0.7-blindage-en_code-html.json  v0.7-blindage-en_timeline-html.json
scripts/: package-lock.json  package.json  render-md.mjs
tests/: test_arithmetic.mjs  test_arithmetic.py  test_bounds.py  test_bridges.py  test_cities_data.py  test_leap_second.py  test_multi_planetary.mjs  test_multi_planetary.py  test_perf.py  test_property.py  test_vectors.mjs  test_vectors.py
