[project]
name = "ats-time"
version = "0.5.0"
description = "Apollonian Time System — decimal/linear time standard anchored to the day of the Apollo 11 lunar landing (1969-07-20T00:00:00Z)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sylvain Geffroy" }]
requires-python = ">=3.9"
keywords = ["time", "calendar", "ats", "apollonian", "decimal"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://s-geffroy.github.io/ATS/"
Repository = "https://github.com/s-geffroy/ATS"
Issues = "https://github.com/s-geffroy/ATS/issues"
Changelog = "https://github.com/s-geffroy/ATS/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
  "E501",  # line length handled by formatter
  "UP007", # keep Union[X, None] readable in places
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
