[project]
name = "ats-time"
version = "0.7.0"
description = "Apollonian Time System — decimal/linear time standard anchored to the day of the Apollo 11 lunar landing (1969-07-20T00:00:00Z). v0.7 ships the new short form ΔK.H.D.Kin-BC.M, promotes the multi-planetary annex to normative, and adds the world-map Cities page."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sylvain Geffroy" }]
requires-python = ">=3.9"
keywords = ["time", "calendar", "ats", "apollonian", "decimal"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
# Calendar bridges (§2.3, §5.1). Each module degrades cleanly with an
# informative ImportError when its dependency is absent, so the core ATS
# package stays dependency-free.
bridges = [
  "convertdate>=2.4",   # Hebrew, Islamic, Mayan, Indian civil
  "lunardate>=0.2",     # Chinese lunisolar (HKO tables 1900–2100)
]

[project.urls]
Homepage = "https://s-geffroy.github.io/ATS/"
Repository = "https://github.com/s-geffroy/ATS"
Issues = "https://github.com/s-geffroy/ATS/issues"
Changelog = "https://github.com/s-geffroy/ATS/blob/main/CHANGELOG.md"

# Setuptools layout: sources under code/, top-level modules `ats` and
# `ats_multi_planetary`, sub-package `bridges`. This disambiguates auto-
# discovery now that the repo root also contains `archive/` and
# `lighthouse/` directories (which setuptools 80+ would otherwise treat
# as additional packages).
[tool.setuptools]
package-dir = {"" = "code"}
py-modules = ["ats", "ats_multi_planetary"]
packages = ["bridges"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
  "E501",  # line length handled by formatter
  "UP007", # keep Union[X, None] readable in places
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
